<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be.mneli.rushhour.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_home_main"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tv_home_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_home_city"
            android:textAlignment="center"
            android:textSize="35sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_home_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home_game"/>

        <Button
            android:id="@+id/btn_home_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home_scores"/>

        <Button
            android:id="@+id/btn_home_wiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home_wiki"/>

        <Button
            android:id="@+id/btn_home_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home_settings"/>

    </LinearLayout>

</LinearLayout>
