<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be.mneli.rushhour.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_welcome_main"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_welcome_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_welcome_username_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_welcome_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_welcome_password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_welcome_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_welcome_login"/>

        <Button
            android:id="@+id/btn_welcome_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_welcome_register"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_welcome_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_welcome_guest"/>

    </LinearLayout>

</LinearLayout>
